[package]
name = "api-home"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-trait = "0.1.58"
dotenv = "0.15.0"
sqlx = {version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"]}
serde_json = "1.0"
serde = "1.0"
thiserror = "1.0"
chrono = {version = "0.4", features = ["serde"]}
